fix a genshi string in fcomm.org

--- a/fedoracommunity.org/data/content/apac.html
+++ b/fedoracommunity.org/data/content/apac.html
@@ -34,7 +34,7 @@ index=math.ceil(len(contries)/float(2))
 						<h2 class="continent-section-name">${_('Asia-Pacific')}</h2>
 						<h3>${_('Region-Wide Resources')}</h3>
 						<div class="prefix_1">
-						${Markup(_('The Asia-Pacific region is served by the &lt;a href="%s"&gt;Fedora Ambassadors APAC group&lt;/a&gt;.' % 'https://fedoraproject.org/wiki/Fedora_Ambassadors_Asia_Pacific_%28FAMAPAC%29'))}
+						${Markup(_('The Asia-Pacific region is served by the &lt;a href="https://fedoraproject.org/wiki/Fedora_Ambassadors_Asia_Pacific_%28FAMAPAC%29"&gt;Fedora Ambassadors APAC group&lt;/a&gt;.'))}
 
 						<table>
 
