readd server images to alt.fpo

--- a/alt.fedoraproject.org/data/content/index.html
+++ b/alt.fedoraproject.org/data/content/index.html
@@ -75,7 +75,7 @@
         <p>${_('These are very small images you can use to install Fedora over the network.')}</p>
         </div>
         <div class="col-md-9">
-<!--          <div class="white">
+          <div class="white">
             <div class="col-md-1">
             <img src="/static/images/server.png" />
             </div>
@@ -89,7 +89,6 @@
             <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Server/x86_64/iso/Fedora-Server-netinst-x86_64-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.iso">${_('Download')}</a> | <a href="https://getfedora.org/verify">${_('Verify')}</a></p>
             </div>
           </div>
--->
           <div class="white">
             <div class="col-md-1">
             <img src="/static/images/workstation.png" />
