readd server images to arm.fpo

--- a/arm.fedoraproject.org/data/content/index.html
+++ b/arm.fedoraproject.org/data/content/index.html
@@ -61,7 +61,7 @@
         <p>${_('These images are geared towards ARM-based computers used as servers, typically in a headless environment.')}</p>
         </div>
         <div class="col-md-9">
-<!--          <div class="white">
+          <div class="white">
             <div class="col-md-1">
             <img src="/static/images/server.png" />
             </div>
@@ -75,7 +75,6 @@
             <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Server/armhfp/images/Fedora-Server-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="verify.html">${_('Verify')}</a></p>
             </div>
           </div>
-        -->
           <div class="white">
             <div class="col-md-1">
             <img src="/static/images/minimal.png" />
@@ -109,7 +108,7 @@
         </div>
       </div>
       <div class="row">
-<!--        <div class="white">
+        <div class="white">
           <div class="col-xs-3">
           <img src="/static/images/server.png" />
           </div>
@@ -118,7 +117,6 @@
           <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Server/armhfp/images/Fedora-Server-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="verify.html">${_('Verify')}</a></p>
           </div>
         </div>
-      -->
         <div class="white">
           <div class="col-xs-3">
           <img src="/static/images/minimal.png" />
@@ -146,7 +144,7 @@
         </div>
       </div>
       <div class="row">
-<!--        <div class="white">
+        <div class="white">
           <div class="col-sm-3">
           <img src="/static/images/server.png" />
           </div>
@@ -157,7 +155,6 @@
           <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Server/armhfp/images/Fedora-Server-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="verify.html">${_('Verify')}</a></p>
           </div>
         </div>
-      -->
         <div class="white">
           <div class="col-sm-3">
           <img src="/static/images/minimal.png" />
