--- a/alt.fedoraproject.org/data/content/verify.html
+++ b/alt.fedoraproject.org/data/content/verify.html
@@ -49,7 +49,7 @@
             <div class="h-body text-center">
               <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-Spins-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_aarch64']}-aarch64-CHECKSUM">${_('aarch64 Minimal')}</a>
             </div>
-<!--            <div class="h-body text-center">
+            <div class="h-body text-center">
               <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-Server-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_aarch64']}-aarch64-CHECKSUM">${_('For aarch64')}</a>
             </div>
             <div class="h-body text-center">
@@ -61,7 +61,6 @@
             <div class="h-body text-center">
               <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-Server-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_s390x']}-s390x-CHECKSUM">${_('For s390x')}</a>
             </div>
--->
         </div>
         <div class="col-sm-3 col-xs-12 highlight productitem">
             <div class="productitem-logo">
