drop Alpha state from testing images and update POT for alt.fpo

--- a/alt.fedoraproject.org/data/content/index.html
+++ b/alt.fedoraproject.org/data/content/index.html
@@ -436,7 +436,7 @@
             <img src="/static/images/tc.png" />
             </div>
             <div class="col-lg-6">
-            <h3>${_('Other composes (Alpha / Beta / TCs / RCs)')}</h3>
+            <h3>${_('Other composes (Beta / TCs / RCs)')}</h3>
             </div>
             <div class="col-lg-4 col-lg-offset-1">
             <p class="download"><a href="https://dl.fedoraproject.org/pub/alt/stage">${Markup(_('View Images &gt;'))}</a></p>
