--- a/alt.fedoraproject.org/data/content/verify-prereleases.html
+++ b/alt.fedoraproject.org/data/content/verify-prereleases.html
@@ -112,14 +112,14 @@
             </div>
             <h4 class="uppercase">${_('Docker')}</h4>
             <div class="h-body text-center">
-              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-Docker-${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold_aarch64']}-aarch64-CHECKSUM">${_('For aarch64')}</a>
+              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-Container-${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold_aarch64']}-aarch64-CHECKSUM">${_('For aarch64')}</a>
             </div>
 <!--            <div class="h-body text-center">
-              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-Docker-${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold_ppc64']}-ppc64-CHECKSUM">${_('For ppc64')}</a>
+              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-Container-${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold_ppc64']}-ppc64-CHECKSUM">${_('For ppc64')}</a>
             </div>
 -->
             <div class="h-body text-center">
-              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-Docker-${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold_ppc64']}-ppc64le-CHECKSUM">${_('For ppc64le')}</a>
+              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-Container-${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold_ppc64']}-ppc64le-CHECKSUM">${_('For ppc64le')}</a>
             </div>
         </div>
     </div>
