fix Workstation path, get back to standard Server image and fix Atomic scripts and verify path

--- a/getfedora.org/data/content/server/prerelease/index.html
+++ b/getfedora.org/data/content/server/prerelease/index.html
@@ -5,7 +5,7 @@
   xmlns:xi="http://www.w3.org/2001/XInclude">
   <xi:include href="../../../templates/master.html" />
   <head>
-    <title>${Markup(_('Download Fedora %s Modular Server')) % global_variables.release['curr_server_state']}</title>
+    <title>${Markup(_('Download Fedora %s Server')) % global_variables.release['curr_server_state']}</title>
   </head>
   <body id="server">
 
@@ -14,8 +14,8 @@
     <div class="container">
       <div class="row">
         <div class="col-md-7 col-md-offset-5 text-left">
-          <h2>${Markup(_('Download Fedora %(rel)s %(state)s Modular Server')) % {'rel':global_variables.release['next_server_id'], 'state':global_variables.release['curr_server_state']}}</h2>
-            <p><a class="btn btn-warning" href="${global_variables.path['download_modular']}/test/${global_variables.release['next_server_id']}_Modular_${global_variables.release['curr_server_state']}/Server/x86_64/iso/Fedora-Modular-Server-dvd-x86_64-${global_variables.release['next_server_id']}_${global_variables.release['curr_server_state']}-${global_variables.release['RC_pre_gold']}.iso" role="button">${_('Download')}</a></p>
+          <h2>${Markup(_('Download Fedora %(rel)s %(state)s Server')) % {'rel':global_variables.release['next_server_id'], 'state':global_variables.release['curr_server_state']}}</h2>
+            <p><a class="btn btn-warning" href="${global_variables.path['download']}/test/${global_variables.release['next_server_id']}_${global_variables.release['curr_server_state']}/Server/x86_64/iso/Fedora-Server-dvd-x86_64-${global_variables.release['next_server_id']}_${global_variables.release['curr_server_state']}-${global_variables.release['RC_pre_gold']}.iso" role="button">${_('Download')}</a></p>
             <h5>${Markup(_('64-bit %sGB Installation Image')) % global_variables.iso_size['pre_x86_64_server_DVD']}</h5>
         </div>
       </div>
@@ -35,15 +35,14 @@
             </py:choose>
           </p>
 
-<!--          <h3>${_('When is Fedora %s going to be released?') % global_variables.release['next_server_id']}</h3>
+          <h3>${_('When is Fedora %s going to be released?') % global_variables.release['next_server_id']}</h3>
             <a href="http://fedoraproject.org/wiki/Releases/${global_variables.release['next_server_id']}/Schedule">${_('Read all the key milestones of the release schedule...')}</a>
--->
 
           <h3>${_('Verify your Image')}</h3>
           	<p>${Markup(_('Once you have downloaded an image, verify it for security and integrity. To verify your image, start by downloading the CHECKSUM file below into the same directory as the image you downloaded and follow &lt;a href="%s/%s/verify"&gt;these instructions&lt;/a&gt;.') % (path, lang))}</p>
             <div class="row bottom-margin">
               <div class="col-sm-6 col-xs-12">
-              <a class="btn btn-default btn-topmargin" href="${path}/static/checksums/Fedora-Modular-Server-${global_variables.release['next_server_id']}_${global_variables.release['curr_server_state']}-${global_variables.release['RC_pre_gold']}-x86_64-CHECKSUM">${_('Validate!')}</a>
+              <a class="btn btn-default btn-topmargin" href="${path}/static/checksums/Fedora-Server-${global_variables.release['next_server_id']}_${global_variables.release['curr_server_state']}-${global_variables.release['RC_pre_gold']}-x86_64-CHECKSUM">${_('Validate!')}</a>
               </div>
             </div>
         </div>
@@ -53,7 +52,7 @@
           <p>
           ${_('Netinstall Image:')}
           <ul>
-          <li><p><a href="${global_variables.path['download_modular']}/test/${global_variables.release['next_server_id']}_Modular_${global_variables.release['curr_server_state']}/Server/x86_64/iso/Fedora-Modular-Server-netinst-x86_64-${global_variables.release['next_server_id']}_${global_variables.release['curr_server_state']}-${global_variables.release['RC_pre_gold']}.iso">${Markup(_('64-bit %sMB image')) % global_variables.iso_size['pre_x86_64_server_net']}</a></p></li>
+          <li><p><a href="${global_variables.path['download']}/test/${global_variables.release['next_server_id']}_${global_variables.release['curr_server_state']}/Server/x86_64/iso/Fedora-Server-netinst-x86_64-${global_variables.release['next_server_id']}_${global_variables.release['curr_server_state']}-${global_variables.release['RC_pre_gold']}.iso">${Markup(_('64-bit %sMB image')) % global_variables.iso_size['pre_x86_64_server_net']}</a></p></li>
           </ul>
           </p>
         </div>
