REVERT this commit if KDE 32bit image for F28-Beta Labs has been produced! Dropping it for now

--- a/spins.fedoraproject.org/data/content/prerelease.html
+++ b/spins.fedoraproject.org/data/content/prerelease.html
@@ -49,10 +49,10 @@
     	  	  		<a class="btn btn-success btn-pre" href="${global_variables.path['download']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Spins/x86_64/iso/Fedora-KDE-Live-x86_64-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso" role="button">64-bit image</a>
     	  	  		<h5>${Markup(_('%s GB ISO Image')) % global_variables.iso_size['pre_x86_64_Live_KDE']}</h5>
   	  	  		</div>
-  	  	  		<div class="col-xs-6 text-center">
+<!--  	  	  		<div class="col-xs-6 text-center">
     	  	  		<a class="btn btn-success btn-pre" href="${global_variables.path['download_arch']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Spins/i386/iso/Fedora-KDE-Live-i386-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso" role="button">32-bit image</a>
     	  	  		<h5>${Markup(_('%s GB ISO Image')) % global_variables.iso_size['pre_i686_Live_KDE']}</h5>
-  	  	  		</div>
+  	  	  		</div> -->
   	  	  	</div>
   	  	   </div>
   	  	  </div>
