re-add LXDE and LXQt ARM images for F28 Beta

--- a/arm.fedoraproject.org/data/content/prerelease.html
+++ b/arm.fedoraproject.org/data/content/prerelease.html
@@ -128,7 +128,7 @@
             <p class="download"><a href="${global_variables.path['download']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Spins/armhfp/images/Fedora-Xfce-armhfp-${global_variables.release['next_arm_id']}_${global_variables.release['curr_arm_state']}-${global_variables.release['RC_pre_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="${path}/static/checksums/Fedora-Spins-${global_variables.release['next_arm_id']}_${global_variables.release['curr_arm_state']}-${global_variables.release['RC_pre_gold']}-armhfp-CHECKSUM">${_('Verify')}</a></p>
           </div>
          </div>
-<!--         <div class="col-xs-12 white">
+         <div class="col-xs-12 white">
             <div class="col-xs-3 col-sm-1 text-center">
               <img class="img-responsive" src="/static/images/lxde.png" alt="LXDE" />
             </div>
@@ -146,7 +146,6 @@
             <p class="download"><a href="${global_variables.path['download']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Spins/armhfp/images/Fedora-LXDE-armhfp-${global_variables.release['next_arm_id']}_${global_variables.release['curr_arm_state']}-${global_variables.release['RC_pre_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="${path}/static/checksums/Fedora-Spins-${global_variables.release['next_arm_id']}_${global_variables.release['curr_arm_state']}-${global_variables.release['RC_pre_gold']}-armhfp-CHECKSUM">${_('Verify')}</a></p>
           </div>
          </div>
-
          <div class="col-xs-12 white">
             <div class="col-xs-3 col-sm-1 text-center">
               <img class="img-responsive" src="/static/images/lxqt.png" alt="LXQt" />
@@ -165,7 +164,6 @@
             <p class="download"><a href="${global_variables.path['download']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Spins/armhfp/images/Fedora-LXQt-armhfp-${global_variables.release['next_arm_id']}_${global_variables.release['curr_arm_state']}-${global_variables.release['RC_pre_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="${path}/static/checksums/Fedora-Spins-${global_variables.release['next_arm_id']}_${global_variables.release['curr_arm_state']}-${global_variables.release['RC_pre_gold']}-armhfp-CHECKSUM">${_('Verify')}</a></p>
           </div>
          </div>
--->
          <div class="col-xs-12 white">
             <div class="col-xs-3 col-sm-1 text-center">
               <img class="img-responsive" src="/static/images/mate.png" alt="MATE-Compiz" />
