--- a/alt.fedoraproject.org/data/content/prerelease/index.html
+++ b/alt.fedoraproject.org/data/content/prerelease/index.html
@@ -236,7 +236,7 @@
                 </a>
               </h3>
             </div>
-            <div id="collapseOne" class="panel-collapse collapse">
+            <div id="collapseOne" class="panel-collapse collapse in">
               <div class="panel-body panel-heading">
                 <h3 class="panel-title accordion-title hidden-xs">
                   <img src="/static/images/server.png" />
