Added mention of Rawhide to alt.fp.o

--- a/alt.fedoraproject.org/data/content/index.html
+++ b/alt.fedoraproject.org/data/content/index.html
@@ -610,6 +610,64 @@
     </div>
   </div>
 -->
+
+  <!-- Rawhide -->
+  <div class="jumbotron main-head top-space visible-lg hidden-xs hidden-sm hidden-md">
+    <div class="container using">
+      <div class="row">
+        <div class="col-xs-2">
+        <h2>${_('Rawhide')}</h2>
+        </div>
+        <div class="col-xs-10">
+          <div class="experts sx">${_('Experts only!')}</div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-12 product-feature">
+        <p>${Markup(_('Find out more about &lt;a href="%s"&gt;Rawhide&lt;/a&gt;, our ever-moving development version. Rawhide is targeted at advanced users, testers, and package maintainers.') % ('https://fedoraproject.org/wiki/Releases/Rawhide'))}</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Rawhide mobile phones-->
+  <div class="jumbotron main-head top-space visible-xs">
+    <div class="container using">
+      <div class="row">
+        <div class="col-xs-6">
+        <h2>${_('Rawhide')}</h2>
+        </div>
+        <div class="col-xs-6">
+          <div class="experts sx">${_('Experts only!')}</div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12 product-feature">
+        <p>${Markup(_('Find out more about &lt;a href="%s"&gt;Rawhide&lt;/a&gt;, our ever-moving development version. Rawhide is targeted at advanced users, testers, and package maintainers.') % ('https://fedoraproject.org/wiki/Releases/Rawhide'))}</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Rawhide mobile tablets-->
+  <div class="jumbotron main-head top-space visible-sm-md hidden-xs hidden-lg">
+    <div class="container using">
+      <div class="row">
+        <div class="col-xs-3">
+        <h2>${_('Rawhide')}</h2>
+        </div>
+        <div class="col-xs-9">
+          <div class="experts sx">${_('Experts only!')}</div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-12 product-feature">
+        <p>${Markup(_('Find out more about &lt;a href="%s"&gt;Rawhide&lt;/a&gt;, our ever-moving development version. Rawhide is targeted at advanced users, testers, and package maintainers.') % ('https://fedoraproject.org/wiki/Releases/Rawhide'))}</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <!-- Resources -->
   <div class="jumbotron whitesupport">
     <div class="container">
